// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundProgress renders an audit board with auditing complete that has not signed off 1`] = `
<div>
  <div
    class="sc-bdVaJa fHQGtV"
  >
    <h4
      class="bp3-heading"
    >
      Audit Board Progress
    </h4>
    <p>
      30
       of 
      30
       ballots audited
       
    </p>
    <div
      class="bp3-progress-bar bp3-intent-success bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
  </div>
  <div
    class="sc-bwzfXH eCcuoP"
  >
    <div>
      <span>
        Audit Board #01: 30 of 30 ballots audited 
      </span>
      <span
        class="bp3-tag bp3-intent-warning"
      >
        <span
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          Not signed off
        </span>
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-warning bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`RoundProgress renders complete round 1`] = `
<div>
  <div
    class="sc-bdVaJa fHQGtV"
  >
    <h4
      class="bp3-heading"
    >
      Audit Board Progress
    </h4>
    <p>
      30
       of 
      30
       ballots audited
       
    </p>
    <div
      class="bp3-progress-bar bp3-intent-success bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
  </div>
  <div
    class="sc-bwzfXH eCcuoP"
  >
    <div>
      <span>
        Audit Board #01: 30 of 30 ballots audited 
      </span>
      <span
        class="bp3-tag bp3-intent-success"
      >
        <span
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          Signed off
        </span>
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`RoundProgress renders incomplete round with an audit board 1`] = `
<div>
  <div
    class="sc-bdVaJa fHQGtV"
  >
    <h4
      class="bp3-heading"
    >
      Audit Board Progress
    </h4>
    <p>
      0
       of 
      30
       ballots audited
       
    </p>
    <div
      class="bp3-progress-bar bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="sc-bwzfXH eCcuoP"
  >
    <div>
      <span>
        Audit Board #01: 0 of 30 ballots audited 
      </span>
      <span
        class="bp3-tag"
      >
        <span
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          Not started
        </span>
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`RoundProgress renders incomplete round with an audit board with no ballots sampled 1`] = `
<div>
  <div
    class="sc-bdVaJa fHQGtV"
  >
    <h4
      class="bp3-heading"
    >
      Audit Board Progress
    </h4>
    <p>
      0
       of 
      30
       ballots audited
       
    </p>
    <div
      class="bp3-progress-bar bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="sc-bwzfXH eCcuoP"
  >
    Audit Board #01
    : no ballots to audit
  </div>
  <div
    class="sc-bwzfXH eCcuoP"
  >
    <div>
      <span>
        Audit Board #02: 0 of 30 ballots audited 
      </span>
      <span
        class="bp3-tag"
      >
        <span
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          Not started
        </span>
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`RoundProgress renders incomplete round with auditing in progress 1`] = `
<div>
  <div
    class="sc-bdVaJa fHQGtV"
  >
    <h4
      class="bp3-heading"
    >
      Audit Board Progress
    </h4>
    <p>
      15
       of 
      30
       ballots audited
       
    </p>
    <div
      class="bp3-progress-bar bp3-intent-primary bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 50%;"
      />
    </div>
  </div>
  <div
    class="sc-bwzfXH eCcuoP"
  >
    <div>
      <span>
        Audit Board #01: 15 of 30 ballots audited 
      </span>
      <span
        class="bp3-tag bp3-intent-primary"
      >
        <span
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          In progress
        </span>
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-primary bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 50%;"
      />
    </div>
  </div>
</div>
`;

exports[`RoundProgress renders incomplete round with two audit boards 1`] = `
<div>
  <div
    class="sc-bdVaJa fHQGtV"
  >
    <h4
      class="bp3-heading"
    >
      Audit Board Progress
    </h4>
    <p>
      0
       of 
      60
       ballots audited
       
    </p>
    <div
      class="bp3-progress-bar bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="sc-bwzfXH eCcuoP"
  >
    <div>
      <span>
        Audit Board #01: 0 of 30 ballots audited 
      </span>
      <span
        class="bp3-tag"
      >
        <span
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          Not started
        </span>
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="sc-bwzfXH eCcuoP"
  >
    <div>
      <span>
        Audit Board #02: 0 of 30 ballots audited 
      </span>
      <span
        class="bp3-tag"
      >
        <span
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          Not started
        </span>
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-no-stripes"
    >
      <div
        class="bp3-progress-meter"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`RoundProgress renders nothing with no audit boards 1`] = `<div />`;
